src/pymergetic/util/gen/__exports__.h

/* DO NOT EDIT — generated by `pymergetic.util.gen` (live registry introspection).
 * Source of truth: pm_wasmmod_registry_* after PM_MOD_EXPORT_* / PM_MOD_EXPORT_RS! registration.
 */
#ifndef PYMERGETIC_UTIL_GEN_EXPORT_H
#define PYMERGETIC_UTIL_GEN_EXPORT_H

#include <stddef.h>
#include <stdint.h>

#include "pymergetic/util/gen/__types__.h"

#ifdef __cplusplus
extern "C" {
#endif

int32_t pm_util_gen_run_vfs(const uint8_t *, uint32_t, const uint8_t *, uint32_t, int32_t, pm_util_gen_vfs_ops_t, void *);

int32_t pm_util_gen_mem_sink_read(const pm_util_gen_mem_sink_t *, const uint8_t *, uint32_t, uint8_t *, uint32_t);

int32_t pm_util_gen_run_mem(const uint8_t *, uint32_t, const uint8_t *, uint32_t, int32_t, pm_util_gen_mem_sink_t **);

void pm_util_gen_set_py_face_provider(pm_util_gen_py_face_fn, void *);

void pm_util_gen_mem_sink_free(pm_util_gen_mem_sink_t *);

int32_t pm_util_gen_run(const uint8_t *, uint32_t, int32_t);

int32_t pm_util_gen_diff_included(const uint8_t *, uint32_t, const uint8_t *, uint32_t, const uint8_t *, uint32_t, const uint8_t *, uint32_t);

#ifdef __cplusplus
}
#endif

#endif /* PYMERGETIC_UTIL_GEN_EXPORT_H */